# tauri-app

./: README.md  tauri-app
src-golib/: build.sh  go.mod  go.sum  module.go
src-golib/app/controller/: system.go
src-golib/app/middleware/: accesslog.go  request_id.go  stripsuffix.go
src-golib/app/request/system/: system_httpd.go  system_logger.go  version.go
src-golib/config/: config.go  config.toml
src-golib/framework/: application.go  const.go  context.go  errors.go  handler.go  logger.go  model.go  request.go  response_writer.go  route.go  router.go  utils.go
src-golib/pkg/appdata/: appdata.go  appdata_darwin.go  appdata_linux.go  appdata_windows.go
src-golib/pkg/fiber/: fiber.go  fiber_test.go
src-golib/pkg/httpd/: server.go
src-golib/pkg/sqlite/: builder.go  builder_test.go  db.go  db_test.go  errors.go  manager.go  parser.go  utils.go
src-golib/router/: api.go  base.go
src-golib/utils/: fs.go
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: Greet.vue
